# mitoquest

./: .gitignore  CMakeLists.txt  README.md  UPDATELOG.md  release_v1.10.0.md  release_v1.7.1.md  release_v1.8.0.md  release_v1.8.1.md  release_v1.8.2.md  release_v1.8.3.md  release_v1.8.4.md  release_v1.8.5.md  release_v1.8.6.md  release_v1.9.2.md
.github/workflows/: build.yml
data/: README.md  UPDATE_LOG.md  blacklist.txt
data/databases/: mitomap_genome_loci.csv
data/insilicos/: README.md
handoff/: HANDOFF_ne_estimate_methods.md  HANDOFF_ne_estimate_vs_deCODE_methodology.md  HANDOFF_per_family_ne_estimation.md  HANDOFF_v1.11.0_per_family_ne.md  HANDOFF_v1.8.0-v1.8.6_ne_estimation_pipeline.md  README.md
scripts/: count_align_fragments.cpp  create_join_seq.py  make.sh  mito_caller.cpp  mt_copynum.cpp  shift_fasta.py
src/: algorithm.cpp  algorithm.h  basetype.cpp  basetype.h  log_factorial.cpp  log_factorial.h  main.cpp  mt_caller_utils.cpp  mt_caller_utils.h  mt_copynum.cpp  mt_copynum.h  mt_utils.cpp  mt_utils.h  mt_variant_caller.cpp  mt_variant_caller.h  ne_estimate.cpp  ne_estimate.h  trans_prep.cpp  trans_prep.h  variant_qc.cpp  variant_qc.h  vcf_subset_samples.cpp  vcf_subset_samples.h  version.h  version.h.in
src/io/: bam.cpp  bam.h  bam_header.cpp  bam_header.h  bam_record.cpp  bam_record.h  hts_utils.h  iobgzf.cpp  iobgzf.h  utils.cpp  utils.h  vcf.cpp  vcf.h  vcf_header.cpp  vcf_header.h  vcf_record.cpp  vcf_record.h
tests/: CMakeLists.txt  algorithm_test.cpp  make.sh  mt_copynum_test.cpp  test_algorithm.cpp  test_bam.cpp  test_bamheader.cpp  test_bamrecord.cpp  test_combinations.cpp  test_fasta.cpp  test_hts_utils.cpp  test_iobgzf.cpp  test_ne_estimate.cpp  test_thread_pool.cpp  test_threadpool.cpp  test_trans_prep.cpp  test_utils.cpp  test_variant_qc.cpp  test_vcf_record.cpp
tests/data/: bamfile.list  ce.fa.gz.gzi  chrM_rCRS.decoy.fa.gz.fai  chrM_rCRS.decoy.fa.gz.gzi  smp2_subset.bam  smp2_subset.bam.bai  test.sh  test2.vcf  test3.vcf  tinyfasta.fa.fai
tests/data/ne_pipeline/: README.md  all_homoplasmic_pairs.tsv  ne_diagnostic.py  per_family_validation.tsv  run_demo.sh  smoke_per_family.tsv  smoke_trio.tsv  synthesize.py  validate_estimators.py  validation_results.md  validation_results.tsv  verify_popgen.py
tests/io/: bam_test.cpp  iobgzf_test.cpp  vcf_record_test.cpp  vcf_test.cpp
tests/simulateNGSMix/: README.md  simulateNGSMix.sh
tools/: GMM_classifier_plus.py  README.md  annotate_vars.py  detect_NUMT_by_mtCN.py  filter_mergedVCF.py  kimura.py  mito_annotate.py  mito_annotation.py  mito_classifier.py  mito_vqsr.py  mito_vqsr_mul1.py  mtDNA_variant_QC.py  mtDNA_variant_quality_control.py  mtDNA_vcf_to_table.py  mtDNA_vcf_to_tidy.py  parse_annotatedVCF.py  parse_vcf.py  plot_bottleneck_simulation.py  plot_mito_bottlenechk_smulation.py  plot_ne_profile.py  rewrite_vcf.py  test_kimura_pytest.py
tools/vqsr/: variant_data_manager.py  variant_recalibrator.py  variant_recalibrator_engine.py  vcfutils.py  vqsr.py
